student-attendance-microservices/k8s/management-backend-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-management-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-management-service
  template:
    metadata:
      labels:
        app: student-management-service
    spec:
      containers:
      - name: student-management-service
        image: gunjan1603/student-management-service:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: student-management-service
spec:
  type: ClusterIP
  selector:
    app: student-management-service
  ports:
  - port: 3000
    targetPort: 3000
