student-attendance-microservices/k8s/management-frontend-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: management-frontend
  template:
    metadata:
      labels:
        app: management-frontend
    spec:
      containers:
      - name: management-frontend
        image: gunjan1603/management-frontend:latest
        securityContext:
          capabilities:
            add: ["NET_BIND_SERVICE"]
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: management-frontend
spec:
  type: NodePort
  selector:
    app: management-frontend
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30002
