student-attendance-microservices/k8s/student-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-backend
  template:
    metadata:
      labels:
        app: student-backend
    spec:
      containers:
      - name: student-backend
        image: gunjan1603/student-backend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: student-backend
spec:
  type: ClusterIP
  selector:
    app: student-backend
  ports:
  - port: 8000
    targetPort: 80
