student-attendance-microservices/k8s/student-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-frontend
  template:
    metadata:
      labels:
        app: student-frontend
    spec:
      containers:
      - name: student-frontend
        image: gunjan1603/student-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: student-frontend
spec:
  type: NodePort
  selector:
    app: student-frontend
  ports:
  - port: 8080
    targetPort: 80
    nodePort: 30003
